--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     
 " />
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content="https://molteniluca.gihtub.io/about/">
+	<meta property="og:url" content="https://molteniluca.github.io/about/">
   <meta property="og:site_name" content="Luca Molteni&#39;s Blog">
   <meta property="og:title" content="About me!">
   <meta property="og:description" content="Hi! I’m Luca, a computer engineering graduate at Politecnico di Milano, my interests are mainly revolving around computer science and specifically computer security. In my free time i tinker with stuff and play CTFs with the Tower of Hanoi and Mhackeroni teams. If you’re interested in what I do check out the posts in my blog!">
@@ -20,16 +20,16 @@
   <meta name="twitter:title" content="About me!">
   <meta name="twitter:description" content="Hi! I’m Luca, a computer engineering graduate at Politecnico di Milano, my interests are mainly revolving around computer science and specifically computer security. In my free time i tinker with stuff and play CTFs with the Tower of Hanoi and Mhackeroni teams. If you’re interested in what I do check out the posts in my blog!">
 
-        <link href="https://molteniluca.gihtub.io/css/fonts.2c2227b81b1970a03e760aa2e6121cd01f87c88586803cbb282aa224720a765f.css" rel="stylesheet">
+        <link href="https://molteniluca.github.io/css/fonts.2c2227b81b1970a03e760aa2e6121cd01f87c88586803cbb282aa224720a765f.css" rel="stylesheet">
 	
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="https://molteniluca.gihtub.io/css/main.6a0f23ea50fd34b46fee262a5a68e17d458c51a2bc99ba1ba018065de6b180c3.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://molteniluca.github.io/css/main.6a0f23ea50fd34b46fee262a5a68e17d458c51a2bc99ba1ba018065de6b180c3.css" />
 </head>
 <body>
         <div class="content"><header>
 	<div class="main">
-		<a href="https://molteniluca.gihtub.io/">Luca Molteni&#39;s Blog</a>
+		<a href="https://molteniluca.github.io/">Luca Molteni&#39;s Blog</a>
 	</div>
 	<nav>
 		
