--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Luca Molteni&#39;s Blog | Home </title><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta property="og:image" content=""/>
-	<link rel="alternate" type="application/rss+xml" href="https://molteniluca.gihtub.io/index.xml" title="Luca Molteni's Blog" />
-	<meta property="og:url" content="https://molteniluca.gihtub.io/">
+	<link rel="alternate" type="application/rss+xml" href="https://molteniluca.github.io/index.xml" title="Luca Molteni's Blog" />
+	<meta property="og:url" content="https://molteniluca.github.io/">
   <meta property="og:site_name" content="Luca Molteni&#39;s Blog">
   <meta property="og:title" content="Luca Molteni&#39;s Blog">
   <meta property="og:locale" content="en_us">
@@ -15,18 +15,18 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Luca Molteni&#39;s Blog">
 
-        <link href="https://molteniluca.gihtub.io/css/fonts.2c2227b81b1970a03e760aa2e6121cd01f87c88586803cbb282aa224720a765f.css" rel="stylesheet">
+        <link href="https://molteniluca.github.io/css/fonts.2c2227b81b1970a03e760aa2e6121cd01f87c88586803cbb282aa224720a765f.css" rel="stylesheet">
 	
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="https://molteniluca.gihtub.io/css/main.6a0f23ea50fd34b46fee262a5a68e17d458c51a2bc99ba1ba018065de6b180c3.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://molteniluca.github.io/css/main.6a0f23ea50fd34b46fee262a5a68e17d458c51a2bc99ba1ba018065de6b180c3.css" />
 </head>
 
 	<body>
 		<div class="content">
 			<header>
 	<div class="main">
-		<a href="https://molteniluca.gihtub.io/">Luca Molteni&#39;s Blog</a>
+		<a href="https://molteniluca.github.io/">Luca Molteni&#39;s Blog</a>
 	</div>
 	<nav>
 		
